<resources>
  <string name="app_name">BeautifulToDo</string>
  <string name="btn_add">+</string>
  <string name="btn_add_item">Add Item</string>
  <string name="btn_add_list">Add List</string>
  <string name="btn_cancel">Cancel</string>
  <string name="btn_done">Done</string>
  <string name="btn_style">Style</string>
  <string name="btn_subtract">-</string>
  <string name="label_text_size">Text Size: </string>
  <string name="new_list_name">New List Name</string>
  <string name="new_note_comments">Comments..</string>
  <string name="new_note_name">New Note Name</string>
</resources>